--- a/app/src/main/res/layout/viewtask.xml
+++ b/app/src/main/res/layout/viewtask.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
         android:text="New Text"
         android:id="@+id/taskView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textSize="20dp"
+        android:textColor="@android:color/white"
+        android:typeface="sans"
+        android:textAllCaps="true"
         android:layout_toLeftOf="@+id/doneButton"
         android:layout_alignBottom="@+id/doneButton"
         android:gravity="center_vertical" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/doneButton"
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
+        android:text="DONE"
         android:background="@android:color/holo_blue_dark"
-        android:onClick="onDeleteButtonClick"
-        android:src="@android:drawable/ic_menu_delete"
+        android:id="@+id/doneButton"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-
+        android:layout_alignParentEnd="true"
+        android:onClick="onDeleteButtonClick"/>
 </RelativeLayout>
