--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="blue">#99FFFF</color>
-    <color name="green">#228b22</color>
+    <color name="dark_pink">#99004C</color>
 </resources>
